--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,12 @@ body{
     margin: 0;
 }
 .title {
-    float: left;
-    position: absolute;
-    color: #000;
     width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 .menu {
     float: left;
